Adding crafting
